@@ -3,7 +3,9 @@
 // $Id$
 
 $cs_lang = cs_translate('cash');
+
 $data = array();
+$data['op'] = cs_sql_option(__FILE__, 'cash');
 
 $tables = 'cash ca INNER JOIN {pre}_users usr ON ca.users_id = usr.users_id';
 $cells = 'ca.cash_id AS cash_id, ca.cash_time AS cash_time, ca.cash_inout AS cash_inout, ca.users_id AS users_id, usr.users_nick AS users_nick, ca.cash_text AS cash_text';
