@@ -1,0 +1,5 @@
+UPDATE {pre}_options SET options_value = '2011.4.2 GIT' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
+UPDATE {pre}_options SET options_value = '2013-10-01' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
+UPDATE {pre}_options SET options_value = '91' WHERE options_mod = 'clansphere' AND options_name = 'version_id';
+
+INSERT INTO {pre}_options (options_mod, options_name, options_value) VALUES ('cash', 'currency', 'Euro');
